package calculatorMVC.db.input;

public interface IInput {
    void getData();
    String getDataFromConsole();

}
