package calculatorMVC.db.output;

public interface IOutput {
    void saveData();
    String outputResultToConsole(String inputString);
}
