package calculatorMVC.view;

public interface IView {
    String runCalculator();
}
